...
    android:id="@+id/fragment_edit_routine"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <Button
        android:id="@+id/back_button"
        android:layout_width="71dp"
        android:layout_height="44dp"
        android:text="⬅"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routine_title">

        <TextView
            android:id="@+id/routine_elapsed_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No goal time set"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/goalTimeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:hint="Enter goal time (minutes)"
            android:inputType="number"
...
